--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
                 <a href="peta.html" class="lbtn btn-peta">Tampilkan Peta</a>
             </div>
             <div class='subkonten'>
+                <a href="petajson.html" class="lbtn btn-peta2">Fetch-JSON Peta</a>
+            </div>
+            <div class='subkonten'>
                 <a href="profile.html" class="lbtn btn-profile">Profile</a>
             </div>
         </div>
