--- a/public/peta.html
+++ b/public/peta.html
@@ -39,7 +39,7 @@
                  popup: "Toko OEN",
                  event : {
                      gambar: "1.jpg",
-                     review: "Toko OEN"
+                     review: "Good ambience, tasty food, a little bit pricy but worth it."
                  }
              },
              {
@@ -47,7 +47,7 @@
                  popup: "Bakso Bakar Pak Man",
                  event: {
                      gambar: "2.jpg",
-                     review: "Bakso Bakar Pak Man"
+                     review: "One of best meatball in Malang.. 10/10 will come back again.. Crowded place in small place.. But the taste is very yummy.. You should try"
                  }
              },
              {
@@ -55,7 +55,7 @@
                  popup: "Soto Ayam Lombok",
                  event: {
                      gambar: "3.jpg",
-                     review: "Soto Ayam Lombok"
+                     review: "The legendary Soto Lombok, affordable price for one bowl of Soto Ayam with IDR 25k, the place is clean and neat. The taste is always pleased your tongue and made you to add one more bowl :)"
                  }
              },
              {
@@ -63,15 +63,15 @@
                  popup: "Mie Setan",
                  event: {
                      gambar: "4.jpg",
-                     review: "Mie Setan"
+                     review: "Try the level 5 spicy noodles and cry until you think there's no more tears to shed! What I like about the noodles is that beyond the tang they have excellent flavor. The sausage and veggies coming with them are also a nice touch to alleviate your tongue. Also, if you're looking into sides, the dim sum is a great choice! Thanks, Mie Sean, for the memories!"
                  }
              },
              {
-                 location: [-7.9832459,112.6317166],
-                 popup: "Bakpao Boldy Malang",
+                 location: [-7.975696,112.6177973],
+                 popup: "Pecel Kawi 'Hj. Musilah' Asli 1975 ",
                  event: {
                      gambar: "5.jpg",
-                     review: "Bakpao Boldy Malang"
+                     review: "the peanut sauce is superb.  slightly spicy but has a very smooth texture. the price is very cheap.  1 porsion for 11.000. they also sell other traditional food.  If you love the peanut sauce , you can buy from them"
                  }
              }
          ];
