--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="mygrid.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+    
+    <!-- add to homescreen -->
+    <link rel="manifest" href="manifest/manifest.json">
+
+    <!-- ini untuk offline app -->
     <script>
         // Check that service workers are registered
         if ('serviceWorker' in navigator) {
