--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,16 @@
             <p class="font h">MAKANA</p>
         </div>
         <div class="sidebar">
-            <img src="./img/girl.png" class="a"  alt="">
-            <h1>Aura Kanza Caesaria</h1>
-            <p>Hi there, I am Aura. I enroll Mobile Web Specialist by Google</p>
-            <br>
-            <div class="center acc">
-                <a href="https://github.com/aurakanzaa"><i class="fab fa-github"></i></a>&nbsp;
-                <a href="https://www.linkedin.com/in/aura-kanza-caesaria-734361163/"><i class="fab fa-linkedin-in"></i></a>&nbsp;
-                <a href="https://www.instagram.com/aurakanzaa/"><i class="fab fa-instagram"></i></a>&nbsp;
+            <div class="cont">
+                <img src="./img/girl.png" class="a"  alt="">
+                <h1>Aura Kanza Caesaria</h1>
+                <p>Hi there, I am Aura. I enroll Mobile Web Specialist by Google</p>
+                <br>
+                <div class="center acc">
+                    <a href="https://github.com/aurakanzaa"><i class="fab fa-github"></i></a>&nbsp;
+                    <a href="https://www.linkedin.com/in/aura-kanza-caesaria-734361163/"><i class="fab fa-linkedin-in"></i></a>&nbsp;
+                    <a href="https://www.instagram.com/aurakanzaa/"><i class="fab fa-instagram"></i></a>&nbsp;
+                </div>
             </div>
         </div>
         <div class="konten">
