--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             
         </div>
         <div class="header">
-            <p class="font h">MAKANA</p>
+            <h1 class="font h">MAKANA</h1>
         </div>
         <div class="sidebar">
             <div class="cont">
@@ -57,7 +57,7 @@
                 <a href="petajson.html" class="lbtn btn-peta2">Fetch-JSON Peta</a>
             </div>
             <div class='subkonten'>
-                <a href="profile.html" class="lbtn btn-profile">Profile</a>
+                <a href="myprofile.html" class="lbtn btn-profile">Profile</a>
             </div>
         </div>
         <div class="footer">
