--- a/public/petajson.html
+++ b/public/petajson.html
@@ -11,13 +11,13 @@
       <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
    </head>
    <body>
-     <div class="container2">
-        <div class='peta' id='mapid'> </div>
-        <div class='gambar' id='gambar' style="width: 100%;">
-           Gambar Disini
-        </div>
-        <div class='review' id='review'>Tulis review disini</div>
-     </div>
-      <script src="js/peta2.js"></script>
+      <div class="container2">
+          <div class='peta' id='mapid'> </div>
+          <div class='gambar' id='gambar' style="width: 100%;">
+             Gambar Disini
+          </div>
+          <div class='review' id='review'>Tulis review disini</div>
+      </div>
+      <script src="js/peta.js"></script>
    </body>
 </html>
