--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 <a href="peta.html" class="lbtn btn-peta">Tampilkan Peta</a>
             </div>
             <div class='subkonten'>
-                <a href="petajson.html" class="lbtn btn-peta2">Fetch-JSON Peta</a>
+                <a href="tp.html" class="lbtn btn-peta2">Fetch-JSON Peta</a>
             </div>
             <div class='subkonten'>
                 <a href="myprofile.html" class="lbtn btn-profile">Profile</a>
