--- a/public/petajson.html
+++ b/public/petajson.html
@@ -18,6 +18,6 @@
           </div>
           <div class='review' id='review'>Tulis review disini</div>
       </div>
-      <script src="js/peta.js"></script>
+      <script src="js/peta3.js"></script>
    </body>
 </html>
